[gd_scene load_steps=2 format=2]

[ext_resource path="res://tests/audio_tests/Audio_Test_Scene.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.396
anchor_bottom = 0.389
margin_left = 3.0
margin_top = 27.0
margin_right = 2.83997
margin_bottom = 26.94
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feedback Completed Button" type="Button" parent="VBoxContainer"]
margin_right = 379.0
margin_bottom = 20.0
text = "Play Feedback Completed"

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer/Feedback Completed Button"]
margin_left = 380.0
margin_right = 806.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -130, -123 )
text = "res://scenes/Audio/Feedbacks/Feedback_Puzzle_Completed.tscn
"
scroll_active = false

[node name="Feedback Bad Button" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 379.0
margin_bottom = 44.0
text = "Play Feedback Bad"

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/Feedback Bad Button"]
margin_left = 380.0
margin_right = 818.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -130, -123 )
text = "res://scenes/Audio/Feedbacks/Feedback_Puzzle_Progress_Bad.tscn
"
scroll_active = false

[node name="Feedback Good Button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 379.0
margin_bottom = 68.0
text = "Play Feedback Good"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Feedback Good Button"]
margin_left = 380.0
margin_top = -3.0
margin_right = 849.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( -130, -123 )
text = "res://scenes/Audio/Feedbacks/Feedback_Puzzle_Progress_Good.tscn
"
scroll_active = false

[node name="Feedback Pickup Button" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 379.0
margin_bottom = 92.0
text = "Play Feedback Pickup"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Feedback Pickup Button"]
margin_left = 382.0
margin_top = 1.0
margin_right = 821.0
margin_bottom = 40.0
text = "res://scenes/Audio/Feedbacks/Feedback_Block_Pickup.tscn"

[node name="Feedback Build Button" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 379.0
margin_bottom = 116.0
text = "Play Feedback Build"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Feedback Build Button"]
margin_left = 380.0
margin_top = 3.0
margin_right = 811.0
margin_bottom = 40.0
text = "res://scenes/Audio/Feedbacks/Feedback_Block_Build.tscn"

[node name="Feedback Invalid Button" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 379.0
margin_bottom = 140.0
text = "Play Feedback Invalid"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Feedback Invalid Button"]
margin_left = 379.0
margin_top = 1.0
margin_right = 782.0
margin_bottom = 40.0
text = "res://scenes/Audio/Feedbacks/Feedback_Block_Invalid.tscn"

[node name="Feedback Ambient Button" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 379.0
margin_bottom = 164.0
text = "Play Ambient"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 0.396
anchor_bottom = 0.389
margin_top = 328.0
margin_right = -0.160034
margin_bottom = 327.94

[node name="Music Lobby Button" type="Button" parent="VBoxContainer2"]
margin_right = 379.0
margin_bottom = 20.0
text = "Play Main Menu"

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer2/Music Lobby Button"]
margin_left = 380.0
margin_right = 741.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -130, -123 )
text = "res://scenes/Audio/Music/Music_Lobby.tscn
"
scroll_active = false

[node name="Feedback Bad  Button" type="Button" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 379.0
margin_bottom = 44.0
text = "Lobby"

[node name="Feedback Good Button" type="Button" parent="VBoxContainer2"]
margin_top = 48.0
margin_right = 379.0
margin_bottom = 68.0
text = "Level set 1"

[node name="Feedback Pickup Button2" type="Button" parent="VBoxContainer2"]
margin_top = 72.0
margin_right = 379.0
margin_bottom = 92.0
text = "Level set 2"

[node name="Feedback Build Button3" type="Button" parent="VBoxContainer2"]
margin_top = 96.0
margin_right = 379.0
margin_bottom = 116.0
text = "Level set 3"

[node name="Feedback Ambient" type="Button" parent="VBoxContainer2"]
margin_top = 120.0
margin_right = 379.0
margin_bottom = 140.0
text = "Credits?"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 65.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 33, 20 )
text = "Sounds"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = 284.0
margin_right = 70.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 33, 20 )
text = "Music"

[connection signal="button_down" from="VBoxContainer/Feedback Completed Button" to="." method="_on_Feedback_Completed_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Feedback Bad Button" to="." method="_on_Feedback_Bad_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Feedback Good Button" to="." method="_on_Feedback_Good_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Feedback Pickup Button" to="." method="_on_Feedback_Pickup_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Feedback Build Button" to="." method="_on_Feedback_Build_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Feedback Invalid Button" to="." method="_on_Feedback_Invalid_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Feedback Ambient Button" to="." method="_on_Feedback_Ambient_Button_button_down"]
[connection signal="button_down" from="VBoxContainer2/Music Lobby Button" to="." method="_on_Music_Lobby_Button_button_down"]
